--- a/Pages/Dashboard.html
+++ b/Pages/Dashboard.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\vaibhav\Desktop\EmployeePayroll\Styles\Dashboard.css">
-    <script src="C:\Users\vaibhav\Desktop\EmployeePayroll\JS\Dashboard.js"></script>
+    <link rel="stylesheet" href="../Styles/Dashboard.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <img src="C:\Users\vaibhav\Desktop\EmployeePayroll\Assets\logo.png" alt="Employee Payroll Logo" class="logo">
+            <img src="../Assets/logo.png" alt="Employee Payroll Logo" class="logo">
             <div class="text-container">
                 <span class="primary-text">EMPLOYEE</span>
                 <span class="secondary-text">PAYROLL</span>
@@ -25,12 +24,12 @@
             </div>
             <div class="searchBar">
                 <input  id = "search-input" class = "search" type = "text" placeholder="Search user"/>
-                <img  id ="search-button" class = "searchIcon" src="C:\Users\vaibhav\Desktop\EmployeePayroll\Assets\search.png"  alt = "">
+                <img  id ="search-button" class = "searchIcon" src="../Assets/search.png"  alt = "">
             </div>
             
             <div class = "searchAddUser-cnt">
-                <a href="C:\Users\vaibhav\Desktop\EmployeePayroll\Pages\EmployeePayroll.html" class="add-button">
-                    <img id="add_img" src="C:\Users\vaibhav\Desktop\EmployeePayroll\Assets\add_icon.png " style="filter: brightness(0) invert(1);" alt=""> Add User
+                <a href="../Pages/EmployeePayroll.html" class="add-button">
+                    <img id="add_img" src="../Assets/add_icon.png " style="filter: brightness(0) invert(1);" alt=""> Add User
                 </a>
             </div>
         </div>
@@ -48,18 +47,15 @@
                 </tr>
             </thead> 
             <tbody id="employeeTableBody">
-                <tr>
-                <td><img src="C:\Users\vaibhav\Desktop\EmployeePayroll\Assets\profile1.png" alt="profile-images"></td>
-                <td>Amarpa Shashanka Keerthi Kumar</td>
-                <td>Female</td>
-                <td><div class="badge">Finance</div></td>
-                <td>10,000</td>
-                <td>29 Oct 2019</td>
-                <td><img src="C:\Users\vaibhav\Desktop\EmployeePayroll\Assets\delete_icon.png" alt="delete" id="delete_icon"><img src="C:\Users\vaibhav\Desktop\EmployeePayroll\Assets\edit_icon.png" alt="edit" id="edit_icon"></td>
-            </tr>
+                
             </tbody>
 
         </table>
     </div> 
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="../JS/Dashboard.js"></script>
+<!-- <script src="C:\Users\vaibhav\Desktop\EmployeePayroll\JS\JQuery.js"></script> -->
+
 </html>
